clusters/prod-cluster/organizations/numinia/akasha-museum/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numinia-akasha-museum-deployment
  namespace: numinia
  labels:
    environment: pro
    app: akasha-museum
    pod-type: hyperfy2-numinia-akasha-museum
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: akasha-museum
      environment: pro
      pod-type: hyperfy2-numinia-akasha-museum
  template:
    metadata:
      labels:
        app: akasha-museum
        environment: pro
        pod-type: hyperfy2-numinia-akasha-museum
    spec:
      serviceAccountName: aws-secret-manager-sa
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: numinia-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numinia-akasha-museum-aws-secrets
      containers:
        - name: hyperfy2-numinia-akasha-museum
          image: ghcr.io/numengames/numinia-hyperfy2:sha-1e16378a96bd315b35db7e19c92c998a39f9731f
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: akasha-museum
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
