clusters/prod-cluster/organizations/numinia/akasha-museum/base/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hyperfy2-numinia-akasha-museum-route
  namespace: numinia
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`akasha-museum.numinia.xyz`)"
      kind: Rule
      services:
        - name: "hyperfy2-numinia-akasha-museum-service"
          port: 3000

  tls:
    secretName: numinia-tls
